# parser_stroydata

./: .gitignore  .gitignore.swp  README.md  pyproject.toml
src/: main.py
